--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -22,16 +22,25 @@
     /*About*/
     .about-iphone img {
         width: 100%;
+        height: 700px;
+    }
+    
+    /*Choose Us*/
+    .choose-us-title {
+        text-align: center
+    }
+    .choose-us-title h2:after {
+        left: 42%
     }
     
     /*Purchase Now*/
-    .purchase-now .col-md-3 {
+    .purchase-now  {
         text-align: center;
-        padding-top: 50px;
+        padding: 40px;
+        
     }
-    .btn-purchase-now {
-        margin-top: 20px;
-        margin-left: 16px
+    .purchase-now p {
+        padding-bottom: 20px
     }
     
     /*Latest Items*/
