--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,6 +60,64 @@ p {
     margin-top: 45px;
 }
 
+/*==================
+     Scrollbar
+===================*/
+-webkit-scrollbar {
+    width: 0;
+}
+#scrollPath {
+    position: fixed;
+    top:0;
+    right: 0;
+    width: 10px;
+    height: 100%;
+    background: rgba(255,255,255,0.05);
+}
+#progressbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 10px;
+    background: #24D330;
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+    0%, 100% {
+        filter: hue-rotate(0deg);
+    }
+    50% {
+        filter: hue-rotate(0deg);
+    }
+}
+
+#progressbar::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #24D330;
+    filter: blur(30px);
+}
+
+#progressbar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #24D330;
+    filter: blur(30px);
+}
+
+
+
+
+
 
 /*==================
      Navigation
@@ -115,10 +173,11 @@ p {
 ===================*/
 
 .header {
-    background-image: url(http://www.imgur.com/oGhJtGF.jpg);
+    background-image: url(..//Images/Iphone%20wallpaper3.jpg);
+    min-width: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: center;
     background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -150,7 +209,7 @@ p {
 }
 
 .header-btns {
-    margin-top: 90px;
+    margin-top: 30px;
     margin-bottom: 50px;
 }
 
@@ -201,6 +260,7 @@ p {
 
 .btn-tour i {
     color: #24D330;
+    transition: ease .3s
 }
 
 .btn-tour i:hover {
@@ -264,15 +324,18 @@ p {
 .choose-us-item div i {
     font-size: 45px;
     color: #24D330;
+    padding: 4px;
     transition: all 1s;
     -webkit-transition: all 1s;
     -moz-transition: all 1s;
     -o-transition: all 1s;
+    
 }
 
 .choose-us-item h3 {
     color: #343434;
     text-transform: uppercase;
+    padding: 4px;
     font-size: 20px;
     font-weight: 800;
 }
@@ -288,7 +351,7 @@ p {
 ===================*/
 
 .testimonial {
-    background-image: url(http://imgur.com/ADgyIyG.jpg);
+    background-image: url(/Images/ipad-mockup-apple-business-39559.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -480,10 +543,11 @@ p {
 ===================*/
 
 .counter {
-    background-image: url(http://imgur.com/eH8RjpD.jpg);
+    background-image: url(..//Images/stats%20background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    min-width: 100%;
     -moz-background-size: cover;
     -o-background-size: cover;
     -webkit-background-size: cover;
