--- a/CSS/style.css
+++ b/CSS/style.css
@@ -351,7 +351,7 @@ p {
 ===================*/
 
 .testimonial {
-    background-image: url(/Images/ipad-mockup-apple-business-39559.jpg);
+    background-image: url('..//Images/ipad-mockup-apple-business-39559.jpeg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
